# cover-review

./: LICENSE  README.md  app.py  install.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: build.yml
cover_review/: __init__.py  __main__.py  app.py
cover_review/static/: app.js  style.css
cover_review/templates/: index.html
packaging/: entry.py
static/: app.js  style.css
templates/: index.html
